# docling-markdown-generator

./: .gitignore  AGENTS.md  Dockerfile  README.md  REVIEW_SUMMARY.md  pyproject.toml
docs/: API_REFERENCE.md  DEPLOYMENT.md  FEATURES.md  MARKDOWN_SPEC.md  TESTING.md
scripts/: verify_real_data.py
src/docling_lib/: cli.py  config.py  converter.py  server.py
tests/: conftest.py  download_samples.py  e2e_real_world.py  test_cli.py  test_config.py  test_converter.py  test_converter_enhanced.py  test_converter_units.py  test_cors.py  test_dos_protection.py  test_download_security.py  test_image_traversal.py  test_output_security.py  test_path_traversal.py  test_security.py  test_server.py  test_server_cleanup.py  test_server_download_errors.py  test_server_helpers.py  test_table_serialization.py  test_utils.py  test_vulnerability.py  verify_log_injection_fix.py
tests/benchmark/: io_benchmark.py
