[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docling_lib"]

[project]
name = "docling_lib"
version = "0.1.0"
description = "A library to generate markdown with embedded figures from PDF files."
requires-python = ">=3.11, <4.0"
dependencies = [
    "docling",
    "docling-core",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.scripts]
docling_converter_cli = "docling_lib.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "requests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning",
]